--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1245,6 +1245,13 @@ en:
       minute: "Minute"
       second: "Second"
 
+  calendar:
+    abbr_weekdays: [S, M, T, W, T, F, S]
+    ok: OK
+    now: Now
+    today: Today
+    clear: Clear
+
   activerecord:
     models:
       card: Card
