--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -638,7 +638,7 @@ ru:
     ok: OK
     now: Сейчас
     today: Сегодня
-    clear: Ясно
+    clear: Очистить
   deleted: 
     conversation: "Обсуждение <b>%{name}</b> удалено"
     left_project: "Вы больше не участвуете в этом проекте"
